assets/css/style.css
/* General styles */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: 'Syne Mono', monospace;
}

/* Navigation bar */

nav {
    background-color: rgb(253, 253, 253);
}

/* Hero image */

#hero-image {
    height: 750px;
    width: 100%;
    background: url(../images/hero-placeholder.jpg) no-repeat center center;
    background-size: 100%;
    opacity: 0;

    animation-name: hero-appear; 
    animation-duration: 2s;
    animation-delay: 1.5s;
    animation-fill-mode: forwards;
}

@keyframes hero-appear {
    0% {opacity: 0}
    100% {opacity: 1}
}


/* Footer */

footer {
    height: 150px;
    background-color: black;
    text-align: center;
}

footer a {
    color: rgb(253, 253, 253);
}

footer a:hover {
    text-decoration: none;
    color: rgba(247, 246, 245, 0.5);
}

#footer-heading {
    padding: 1.5rem;
}

ul#footer-social {
    padding-right: 1rem;
}

#footer-social li {
    display: inline;
}

#footer-social i {
    font-size: 120%;
    padding: 1%;
    /* margin: 1%; */
}

